--- a/lectures/word_relationships/text_mining_tf_idf.Rmd
+++ b/lectures/word_relationships/text_mining_tf_idf.Rmd
@@ -1,16 +1,31 @@
 ## Text Mining - Term vs. Document Frequency
 
-So far we have focused on identifying the [frequency of individual terms](tidy_text) within a document along with the [sentiments](sentiment_analysis) that these words provide.  It is also important to understand the importance that words provide within and across documents.  As we saw in the [tidy text tutorial](tidy_text) *term frequency* (tf) identifies how frequently a word occurs in a document.  We found that many common words such as "the", "is", "for", etc. typically top the term frequency lists.  One approach to correct for these common, yet low context words, is to remove these words by using a list of stop words.
+### Working with $tf_idf$ 
+
+So far we've identified the frequency of individual terms within a document.  However, it's also important to understand the importance that each word provides within an individual document and across a corpus of documents.  In the previous section we saw computed a crude measure of *term frequency* $(tf_{t,d})$ that identifies how frequently term $t$ occurs in document $d$.  Formally, the term frequency measure is expressed as
+
+$$
+tf_{t,d} = \begin{cases}
+1+\log_{10}\Big(\mbox{count(t,d)}\Big)\hspace{10pt}  \mbox{if count(t,d)  > 0}\\\\
+0 \hspace{260px}\mbox{ otherwise }
+\end{cases}
+$$
 
 Another approach is to use what is called a term's *inverse document frequency* (idf), which decreases the weight for commonly used words and increases the weight for words that are not used very much in a collection of documents.  The idf is defined as:
 
-$$\mbox{idf}(t,D) = \log\left(\frac{N}{n_{t}}\right)$$
+$$
+\mbox{idf}(t,D) = \log\left(\frac{N}{n_{t}}\right)
+$$
 
-where the idf of a given term (*t*) in a set of documents (*D*) is a function of the total number of documents being assessed (*N*) and the number of documents where the term *t* appears ($$n_t$$).  In addition, we can combine tf and idf statistics into a single tf-idf statistic, which computes the frequency of a term adjusted for how rarely it is used. Since the ratio inside the idf's log function is always greater than or equal to 1, the value of idf (and tf-idf) is greater than or equal to 0. As a term appears in more documents, the ratio inside the logarithm approaches 1, bringing the idf and tf-idf closer to 0.  tf-idf is defined as
+where the idf of a given term (*t*) in a set of documents (*D*) is a function of the total number of documents being assessed (*N*) and the number of documents where the term *t* appears ($$n_t$$).
 
-$$\mbox{tf-idf}(t,d,D) = \mbox{tf}(t,d) \cdot \mbox{idf}(t,D)$$
+In addition, we can combine tf and idf statistics into a single tf-idf statistic, which computes the frequency of a term adjusted for how rarely it is used. Since the ratio inside the idf's log function is always greater than or equal to 1, the value of idf (and tf-idf) is greater than or equal to 0. As a term appears in more documents, the ratio inside the logarithm approaches 1, bringing the idf and tf-idf closer to 0.  tf-idf is defined as
 
-where tf-idf for a particular term (*t*) in docuement (*d*) for a set of documents (*D*) is simply the product of that term's *tf* and *idf* statistics.  This tutorial will walk you through the process of computing these values so that you can identify high frequency words that provide particularly important context to a single document within a group of documents.
+$$
+\mbox{tf-idf}(t,d,D) = \mbox{tf}(t,d) \cdot \mbox{idf}(t,D)
+$$
+
+where tf-idf for a particular term (*t*) in document (*d*) for a set of documents (*D*) is simply the product of that term's *tf* and *idf* statistics.  This tutorial will walk you through the process of computing these values so that you can identify high frequency words that provide particularly important context to a single document within a group of documents.
 
 ### Term Frequencies {#tf}
 
@@ -19,8 +34,9 @@ To compute term frequencies we need to have our data in a tidy format.  The foll
 From this cleaned up text we can compute the term frequency for each word.  Lets do this for  computing term frequencies by book and across the entire Harry Potter series:
 
 ```{r}
-book_words <- series %>%
+book_words <- hp_tidy %>%
         count(book, word, sort = TRUE) %>%
+        dplyr::anti_join(stop_words) %>%
         ungroup()
 
 series_words <- book_words %>%
@@ -32,8 +48,7 @@ book_words <- left_join(book_words, series_words)
 book_words
 ```
 
-Here, we can see that common and noncontextual words ("the", "to", "and", "of", etc.) rule the term frequency list. We can visualize the distribution of term frequency for each novel.  Here we'll look at the distribution of `n/total`.  Since the distribution is so clustered around 0 I add `scale_x_log10()` to spread it out.  Even so we see the long right tails for thos extremely common words.
-
+Here we'll look at the distribution of `n/total`.  Since the distribution is so clustered around 0 I add `scale_x_log10()` to spread it out.  Even so we see the long right tails for thos extremely common words.
 
 ```{r}
 book_words %>%
@@ -42,40 +57,6 @@ book_words %>%
         geom_histogram(show.legend = FALSE) +
         scale_x_log10() +
         facet_wrap(~ book, ncol = 2)
-```
-
-### Zipf's Law {#zip}
-
-Zipf's law states that within a group or corpus of documents, the frequency of any word is inversely proportional to its rank in a frequency table. Thus the most frequent word will occur approximately twice as often as the second most frequent word, three times as often as the third most frequent word, etc.  Zipf's law is most easily observed by plotting the data on a log-log graph, with the axes being log(rank order) and log(term frequency).
-
-
-```{r}
-freq_by_rank <- book_words %>%
-        group_by(book) %>%
-        mutate(rank = row_number(),
-               `term freq` = n / total)
-        
-
-ggplot(freq_by_rank, aes(rank, `term freq`, color = book)) +
-        geom_line() +
-        scale_x_log10() +
-        scale_y_log10()
-```
-
-Our plot illustrates that the distribution is similar across the seven books. Furthermore, we can compare the distribution to a simple regression line.  We see that the tails of the distribution deviate suggesting our distribution doesn't follow Zipf's law perfectly; however, it is close enough to generally state that the law approximately holds within our corpus of text.
-
-```{r}
-lower_rank <- freq_by_rank %>%
-        filter(rank < 500)
-
-lm(log10(`term freq`) ~ log10(rank), data = lower_rank)
-
-freq_by_rank %>% 
-        ggplot(aes(rank, `term freq`, color = book)) +
-        geom_abline(intercept = -0.9414, slope = -0.9694, color = "gray50", linetype = 2) +
-        geom_line(size = 1.2, alpha = 0.8) +
-        scale_x_log10() +
-        scale_y_log10()
 ```
 
 ### Inverse Document Frequency and tf-idf {#idf}
@@ -89,25 +70,23 @@ book_words <- book_words %>%
 book_words
 ```
 
-Notice how the common *non-contextual* words ("the", "to", "and", etc.) have high tf values but their idf and tf-idf values are 0.  Remember that $\mbox{idf}(t,D) = \log(\frac{N}{n_{t}})$ so these common terms that occur in every document will have an $\mbox{idf} = \log(\frac{7}{7}) = 0$ An since tf-idf is simply $\mbox{tf} \cdot \mbox{idf}$ this will also be zero.  
-
 We can look at the words that have the highest tf-idf values.  Here we see mainly names for characters in each book that are unique to that book, and therefore used often, but are absent or nearly absent in the other books.
 
 ```{r}
 book_words %>%
-        arrange(desc(tf_idf))
+        dplyr::arrange(dplyr::desc(tf_idf))
 ```
 
 To understand the most common *contextual* words in each book we can take a look at the top 15 terms with the highest tf-idf.
 
-```{r}
+```{r, fig.width=8, fig.height=12}
 book_words %>%
-        arrange(desc(tf_idf)) %>%
-        mutate(word = factor(word, levels = rev(unique(word))),
-               book = factor(book, levels = titles)) %>% 
-        group_by(book) %>%
-        top_n(15, wt = tf_idf) %>%
-        ungroup() %>%
+        dplyr::arrange(dplyr::desc(tf_idf)) %>%
+        dplyr::mutate(word = base::factor(word, levels = base::rev(base::unique(word))),
+               book = base::factor(book, levels = titles)) %>% 
+        dplyr::group_by(book) %>%
+        dplyr::top_n(15, wt = tf_idf) %>%
+        dplyr::ungroup() %>%
         ggplot(aes(word, tf_idf, fill = book)) +
         geom_bar(stat = "identity", alpha = .8, show.legend = FALSE) +
         labs(title = "Highest tf-idf words in the Harry Potter series",
