--- a/inclass_activity/POS/POS Tagging Lesson.Rmd
+++ b/inclass_activity/POS/POS Tagging Lesson.Rmd
@@ -4,7 +4,7 @@ output:
   html_document:
     toc: yes
     toc_float: yes
-    number_sections: true
+    number_sections: false
 ---
 
 ```{r setup, include=FALSE}
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Dionysius Thrax of Alexandria (c.100 B.C.) wrote a grammatical sketch that summarized the linguistic knowledge of his day. 
 
-Also included are a description of eight parts-of-speech: noun, verb,parts-of-speech pronoun, preposition, adverb, conjunction, participle, and article. Although earlier scholars (including Aristotle) had their own lists of parts-ofspeech,it was Thrax’s set of eight that became the basis for practically all subsequent part-of-speech descriptions of most European languages for the next 2000 years. 
+Also included are a description of eight parts-of-speech: noun, verb,parts-of-speech pronoun, preposition, adverb, conjunction, participle, and article. Although earlier scholars (including Aristotle) had their own lists of parts-of speech, it was Thrax’s set of eight that became the basis for practically all subsequent part-of-speech descriptions of most European languages for the next 2000 years. 
 
 Thrax's original eight have change since then, but not by much.
 
@@ -25,7 +25,7 @@ Parts-of-speech (also known as **POS**) are useful because they reveal a lot abo
 
 Two categories: **Closed Class** and **Open Class**
 
-Closed-class words have reletively fixed membership. Words tend to be short, occur frequently, and often have structure uses in grammar (i.e. prepositions - new ones are rarely coined)
+Closed-class words have relatively fixed membership. Words tend to be short, occur frequently, and often have structure uses in grammar (i.e. prepositions - new ones are rarely coined)
 
 Open-class words essentially have new words created often. For example, iPhone (noun), Googled (verb).
 
@@ -46,10 +46,10 @@ English has all 4, but some languages do not.
 
 People, places, and things
 - Concrete (ship, actual concrete)
-- Abstractions (bandwitdth, relationship)
+- Abstractions (bandwidth, relationship)
 - Verb-like (Pacing)
 
-Definining a noun in English
+Defining a noun in English
 - Appear with determiners (a ship, its bandwidth)
 - Take possessives (Google's annual revenue)
 - Some can occur in plural form (ships, relationships)
@@ -59,14 +59,14 @@ Two classes of Open-Class nouns:
 **Proper nouns**
 
 - Specific persons or entities (Regina, IBM, Colorado)
-- In English, generally not preceeded by articles (*the book is upstairs*, but *Regina is upstairs*)
+- In English, generally not preceded by articles (*the book is upstairs*, but *Regina is upstairs*)
 - Usually capitalized
 
 **Common nouns**
 
 Count nouns
 
-- Allow gramatical enumeration (boat/boats, relationship, relationships)
+- Allow grammatical enumeration (boat/boats, relationship, relationships)
 - Can actually be counted (one ship, two ships)
 
 Mass nouns
@@ -88,14 +88,14 @@ Some researchers believe all human languages have categories for nouns and verbs
 
 #### 3. Adjectives
 
-Properties or qualitites, description
+Properties or qualities, description
 - Color (black, white)
-- Age (old, yound)
+- Age (old, young)
 - Value (good, bad)
 
 #### 4. Adverbs
 
-Extremely varried in both form and meaning. The following sentence has all adverbs italicized:
+Extremely varied in both form and meaning. The following sentence has all adverbs italicized:
 
 *Actually*, I ran *home extremely quickly yesterday*
 
@@ -126,7 +126,56 @@ Prepositions occur before noun phrases, often to indicate temporal or spatial re
 
 - Literal: *on it*, *before then*
 - Metaphorical: *on time*, *beside herself*
-- Marking an agent: *Hamlet was written* ***by** *Shakespear*
+- Marking an agent: *Hamlet was written* ***by** *Shakespeare*
+
+A particle resembles a preposition or an adverb and is used with verbs.
+
+- She turned the paper *over*
+
+A verb and particle that act together are called phrasal verbs, which can be problematic (not predictable from the specific words themselves).
+
+- *Turn down*, to reject
+- *Rule-out*, to eliminate
+- *Find out*, to discover
+- *go on*, to continue
+
+Determiners (with articles as a subtype) often mark the beginning of noun phrases.
+
+- English has three articles: *a*, *an*, *the*
+- Other determiners: *this*, *that*, as in *this chapter*, or *that page*
+- Articles *a* and *an* mark words as **indefinite**
+- Article *the* marks words as **definite**
+- Articles are the most occurring words in the English language
+
+Conjunctions join two phrases.
+
+- Coordinating conjunctions like *and*, *or*, **and** *but* join two equal clauses
+- Subordinating conjunctions links the main clause with a subordinate one
+- *That* in *I though that you would like some milk*
+- Main clause *I thought*
+- Subordinate clause *you would like some milk*
+- When subordinate conjunctions link a verb to its argument, they are also called **complimentizers**
+
+Pronouns indicate a noun phrase or event
+
+- Personal pronouns refer to persons or entities (*you*, *me*, *I*, *it*, *she*, etc.)
+- Possessive pronouns are forms of personal pronouns that demonstrate some sort of possession or some relationship between a person and some object (*my*, *his*, *yours*, *our*)
+- Wh-pronouns (*who*, *what*, *whom*, *whoever*) are used in certain question forms, or also may act as complimentizers (*John, who married Karen...*)
+
+Auxiliary verbs mark semantic features of a main verb
+
+- Identifies whether an action took place in the past, present, or future
+- If it's completed
+- Negation
+
+Copular verbs (part of auxiliary verbs) connect the subject with certain kinds of predicate nominals or adjectives
+- *George III* **is** *the King of England*
+
+English has many words of more or less unique function
+- Interjections: *oh, hey, alas, uh, um*
+- Politeness markers: *please, thank you*
+- Greetings: *hello, goodbye*
+- The existential **there**: *there are two on the table*
 
 ***
 # PoS Tagging
@@ -200,6 +249,56 @@ Corpora labeled with parts-of-speech are crucial training (and testing) sets for
 \vspace{14cm}
 
 The tagged corpora were created by running an automatic part-of-speech tagger on the texts and then human annotators **hand-corrected** each tag. Minor differences exist between the tagsets used by the corpora. This is worth noting and has the potential to vary part-of-speech tags when applying different tagged corpora. *(We will explore this further on Thursday.)*
+
+# Hidden Markov Models (HMM)
+
+The HMM is a **sequence model**. A sequence model or **sequence classifier** is a model that assigns a label or class to each unit in a sequence, mapping a sequence of observations (words) to a sequence of labels (tags). An HHM is a probabalistic model: given a sequence of words, it computes the probability distribution over possible sequences of labels and chooses the best.
+
+The HHM is based on modifying the Markov chain. Markov chains tell us something about the probabilities of sequences of random variables, *states*, each of which can take on values from some set. To predict the future, all we need to know is the current state. For example, to priduct tomorrow's weather, you could examine today's weather, but not yesterday's weather.
+
+<center>
+
+<img src="Images/MarkovModel.PNG" alt="Coordinates" vspace="25">
+
+</center>
+
+Not asking "which is the most likely tag for the word *will*?"
+
+Asking "If we were going to generate a tag, how likely is it that this modal would be *will*?"
+
+The A transition probabilities, and B observation likelihoods of the HMM are illustrated in Fig. 8.4 for three states in an HMM part-of-speech tagger; the full tagger would have one state for each tag.
+
+<center>
+
+<img src="Images/HMMTagger.PNG" alt="Coordinates" vspace="25">
+
+</center>
+
+**Viterbi**
+
+The decoding algorithm for HHMs is the **Viterbi Algorithm** shown in Fig. 8.5 below. As an instane of dynamic programming, Viterbi resembles the dynamic programming **minimum edit distance**.
+
+<center>
+
+<img src="Images/ViterbiBreakdown.PNG" alt="Coordinates" vspace="25">
+
+</center>
+
+<center>
+
+<img src="Images/ViterbiTagging.PNG" alt="Coordinates" vspace="25">
+
+</center>
+
+**Beam Search**
+
+As the number of states grows very large, the vanilla Viterbi can be very slow. Beam search is a method of keepinig only a few hypothesis at each point (the ones with the highest probabilities)
+
+<center>
+
+<img src="Images/BeamSearch.PNG" alt="Coordinates" vspace="25">
+
+</center>
 
 
 # Maximum Entropy Markov Models (MEMM)
